--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,16 +8,28 @@ import { SITE } from "@consts";
   <Container>
     <div class="flex flex-wrap justify-between gap-y-2">
       <Link href="/" underline={false}>
-        <div class="font-semibold">
+        <div class="text-2xl font-semibold">
           {SITE.TITLE}&nbsp;🔬
         </div>
       </Link>
       <nav class="flex items-center gap-1 text-sm">
-        <Link href="/blog">blog</Link>
+        <Link href="/game">Game</Link>
         <span>
           {`/`}
         </span>
-        <Link href="/projects">projects</Link>
+        <Link href="/lily">Lily</Link>
+        <span>
+          {`/`}
+        </span>
+        <Link href="/creation">Creation</Link>
+        <span>
+          {`/`}
+        </span>
+        <Link href="/blog">Diary</Link>
+        <span>
+          {`/`}
+        </span>
+        <Link href="/rss.xml">RSS</Link>
         <span>
           {`/`}
         </span>
