--- a/src/pages/game/[...slug].astro
+++ b/src/pages/game/[...slug].astro
@@ -1,7 +1,8 @@
 ---
 import { getCollection, type CollectionEntry } from 'astro:content'
 import Layout from '@layouts/Layout.astro'
-import { YouTube } from '@astro-community/astro-embed-youtube'
+import Container from "@components/Container.astro";
+import { YouTube } from 'astro-embed'
 
 type GameEntry = CollectionEntry<'game'>
 
@@ -17,8 +18,10 @@ const { entry } = Astro.props
 const { Content } = await entry.render()
 ---
 
-<Layout title={entry.data.title}>
-	<div class='prose prose:lg md:prose-xl [&>*]:mb-4 dark:prose-invert min-w-full'>
+<Layout title={entry.data.title} description='{entry.data.description}'>
+	<Container>
+	<div class='prose prose:lg md:prose-xl *:mb-4 dark:prose-invert min-w-full'>
 		<Content components={{ YouTube }} />
 	</div>
+	</Container>
 </Layout>
