--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,10 +9,10 @@ import { SITE } from "@consts";
   <Container>
     <div class="mt-16 grid place-items-center gap-3">
       <h4 class="animate text-2xl font-semibold text-black dark:text-white">
-        404: Page not found
+        404: ページが見つかりませんでした。ごめんね。
       </h4>
       <span class="animate">
-        <BackToPrevious href="/">Go to home page</BackToPrevious>
+        <BackToPrevious href="/">トップに戻る</BackToPrevious>
       </span>
     </div>
   </Container>
