--- a/src/pages/creation/index.astro
+++ b/src/pages/creation/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '@layouts/Layout.astro'
+import Container from "@components/Container.astro";
 ---
 
-<Layout title='Creation'>
+<Layout title='Creation' description='創作のページ'>
+	<Container>
 	<div class='flex flex-col container mx-auto'>
-		<h1 class='text-4xl font-bold text-center mb-8'>創作のページ</h1>
 		<h3 class='text-2xl font-bold text-center mb-8'>工事中</h3>
 		<div class='grid gap-4 grid-cols-1 sm:grid-cols-2 my-8 [&>div]:flex [&>div]:flex-col'>
 			<div>
@@ -20,6 +21,7 @@ import Layout from '@layouts/Layout.astro'
 			</div>
 		</div>
 	</div>
+	</Container>
 </Layout>
 
 <style>
