--- a/src/pages/game/index.astro
+++ b/src/pages/game/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '@layouts/Layout.astro'
+import Container from "@components/Container.astro";
 ---
 
-<Layout title='Game'>
+<Layout title='Game' description='ゲームのページ'>
+	<Container>
 	<div class='flex flex-col container mx-auto'>
 		<h1 class='text-4xl font-bold text-center mb-8'>ゲームのページ</h1>
 		<div class='grid gap-4 grid-cols-1 sm:grid-cols-2 [&>div]:flex [&>div]:flex-col'>
@@ -24,26 +26,9 @@ import Layout from '@layouts/Layout.astro'
 			</div>
 		</div>
 	</div>
+	</Container>
 </Layout>
 
 <style>
 	@reference "src/styles/global.css";
 </style>
-
-<script>
-	// import { animate } from 'motion'
-	// const showAnimations = localStorage.getItem('animations') === 'true'
-
-	// if (showAnimations) {
-	// 	animate(
-	// 		'.title',
-	// 		{ y: [80, 0], opacity: [0, 1] },
-	// 		{
-	// 			duration: 2.5,
-	// 			opacity: { duration: 3 },
-
-	// 			offset: [0, 0.55, 0.75]
-	// 		}
-	// 	)
-	// }
-</script>
