--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const latestPost = latestPostEntry?.body
 
 ---
 
-<Layout title='Home', description='ゲーム攻略、百合作品などのサイト。'>
+<Layout title='Magia Laboratory', description='ゲーム攻略、百合作品などのサイト。'>
 	<Container>
 
 	<div class='container mx-auto text-center text-xl font-bold'>
