--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,18 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
-@plugin '@tailwindcss/typography';
+@plugin "@tailwindcss/typography";
 
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-sans: Geist Sans, ui-sans-serif, system-ui, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --font-mono: Geist Mono, ui-monospace, SFMono-Regular, Menlo, Monaco,
-    Consolas, 'Liberation Mono', 'Courier New', monospace;
+  --font-sans:
+    "Noto Sans JP", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Yu Gothic",
+    "Yu Gothic UI", "Meiryo", "Noto Sans", ui-sans-serif, system-ui, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-mono:
+    "Noto Sans Mono CJK JP", "Source Han Code JP", "MS Gothic",
+    "Noto Sans Mono", ui-monospace, Menlo, Monaco, Consolas, "Liberation Mono",
+    "Courier New", monospace;
 }
 
 /*
@@ -52,8 +56,19 @@
     @apply text-black/75 dark:text-white/75;
   }
 
+  body.lily-page {
+    @apply bg-pink-50 dark:bg-rose-950;
+    @apply text-stone-950 dark:text-white;
+  }
+
+  h1,
+  h2,
+  h3 {
+    @apply mx-auto text-center;
+  }
+
   header {
-    @apply fixed left-0 right-0 top-0 z-50 py-6;
+    @apply fixed top-0 right-0 left-0 z-50 py-6;
     @apply bg-neutral-100/75 dark:bg-neutral-900/75;
     @apply saturate-200 backdrop-blur-xs;
   }
@@ -67,7 +82,7 @@
   }
 
   article {
-    @apply prose prose-neutral max-w-full dark:prose-invert prose-img:mx-auto prose-img:my-auto;
+    @apply prose prose-neutral dark:prose-invert prose-img:mx-auto prose-img:my-auto max-w-full;
     @apply prose-headings:font-semibold;
     @apply prose-headings:text-black dark:prose-headings:text-white;
   }
@@ -137,7 +152,7 @@ pre {
 
 /* copy code button on codeblocks */
 .copy-code {
-  @apply absolute right-3 top-3 grid size-9 place-content-center rounded-sm border border-black/15 bg-neutral-100 text-center duration-300 ease-in-out dark:border-white/20 dark:bg-neutral-900;
+  @apply absolute top-3 right-3 grid size-9 place-content-center rounded-sm border border-black/15 bg-neutral-100 text-center duration-300 ease-in-out dark:border-white/20 dark:bg-neutral-900;
 }
 
 .copy-code:hover {
@@ -146,4 +161,16 @@ pre {
 
 .copy-code:active {
   @apply scale-90 transition-transform;
+}
+
+.btn-game {
+  @apply m-1 mx-auto w-full rounded-full bg-gray-700 py-3 text-center text-2xl text-white hover:bg-gray-500;
+}
+.btn-lily {
+  @apply m-1 mx-auto w-full rounded-full bg-pink-700 py-3 text-center text-2xl text-white hover:bg-pink-500;
+}
+
+/* 隠しリンク */
+.hidden-link {
+  display: inline-block;
 }
