僅かに書き換え

--- a/src/pages/lily/[...slug].astro
+++ b/src/pages/lily/[...slug].astro
@@ -20,7 +20,7 @@ const { Content } = await entry.render();
 <Layout title={entry.data.title} description="entry.data.description">
     <Container>
         <div
-            class="prose prose:lg md:prose-xl dark:prose-invert min-w-full [&>*]:mb-4"
+            class="prose prose:lg md:prose-xl dark:prose-invert min-w-full *:mb-4"
         >
             <Content />
         </div>
