--- a/src/components/TableOfContentsHeading.astro
+++ b/src/components/TableOfContentsHeading.astro
@@ -1,10 +1,10 @@
 ---
-import type { Heading } from "./TableOfContents.astro";
+import type { TocHeading } from "./TableOfContents.astro";
 import Link from "./Link.astro";
 
 // https://kld.dev/building-table-of-contents/
 
-const { heading } = Astro.props;
+const { heading } = Astro.props as { heading: TocHeading };
 ---
 
 <li class="list-inside list-disc px-6 py-1.5 text-sm">
@@ -14,7 +14,7 @@ const { heading } = Astro.props;
   {
     heading.subheadings.length > 0 && (
       <ul class="translate-x-3">
-        {heading.subheadings.map((subheading: Heading) => (
+        {heading.subheadings.map((subheading: TocHeading) => (
           <Astro.self heading={subheading} />
         ))}
       </ul>
