--- a/src/pages/text/videotest.astro
+++ b/src/pages/text/videotest.astro
@@ -1,5 +1,5 @@
 ---
-import VideoPlayer from '@/components/LocalVideo'
+import VideoPlayer from "@components/LocalVideo.astro";
 ---
 
 <VideoPlayer src='/videos/test.mp4' width={800} height={450} />
