--- a/src/components/TagCloud.astro
+++ b/src/components/TagCloud.astro
@@ -2,9 +2,8 @@
 import { getCollection } from "astro:content";
 
 const allPosts = await getCollection("blog");
-const allTags = allPosts.map((tag) => tag.data.tags).flat();
+const allTags = allPosts.flatMap((post) => post.data.tags ?? []);
 
-console.log(allTags);
 ---
 
 <span> </span>
