--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,7 +53,7 @@
     @apply font-sans antialiased;
     @apply flex flex-col;
     @apply bg-neutral-100 dark:bg-neutral-900;
-    @apply text-black/75 dark:text-white/75;
+    @apply text-black/75 dark:text-white;
   }
 
   body.lily-page {
