--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,8 +68,8 @@ const latestPost = latestPostEntry?.body
 				<a href='/text/infomation' class='btn-game'> Infomation</a>
 				<a href='/text' class='btn-game'> Text</a>
 				<a href='/blog' class='btn-game'> Diary</a>
+				<a href='https://bbs.magialabs.blog/' class='btn-game'> BBS</a>
 				<a href='https://claudias.magialabs.blog/' class='btn-game'> Mastodon Server</a>
-				<a href='https://discord.com/invite/JfE32Nhhzb' class='btn-game'> Discord</a>
 			</div>
 			<p>Some Links</p>
 			<div>
