--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,24 +5,28 @@ import Container from "@components/Container.astro";
 import ArrowCard from "@components/ArrowCard.astro";
 import { BLOG } from "@consts";
 
-const data = (await getCollection("blog"))
-  .filter((post) => !post.data.draft)
-  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
+const data: CollectionEntry<"blog">[] = (await getCollection("blog"))
+  .filter((post: CollectionEntry<"blog">) => !post.data.draft)
+  .sort(
+    (a: CollectionEntry<"blog">, b: CollectionEntry<"blog">) =>
+      b.data.date.valueOf() - a.data.date.valueOf()
+  );
 
 type Acc = {
   [year: string]: CollectionEntry<"blog">[];
 };
 
-const posts = data.reduce((acc: Acc, post) => {
+const posts = data.reduce((acc: Acc, post: CollectionEntry<"blog">) => {
   const year = post.data.date.getFullYear().toString();
   if (!acc[year]) {
     acc[year] = [];
   }
   acc[year].push(post);
   return acc;
-}, {});
+}, {} as Acc);
 
 const years = Object.keys(posts).sort((a, b) => parseInt(b) - parseInt(a));
+
 ---
 
 <Layout title={BLOG.TITLE} description={BLOG.DESCRIPTION}>
@@ -31,14 +35,14 @@ const years = Object.keys(posts).sort((a, b) => parseInt(b) - parseInt(a));
       <div class="space-y-10">
         <div class="space-y-4">
           {
-            years.map((year) => (
+            years.map((year: string) => (
               <section class="animate space-y-4">
                 <div class="font-semibold text-black dark:text-white">
                   {year}
                 </div>
                 <div>
                   <ul class="not-prose flex flex-col gap-4">
-                    {posts[year].map((post) => (
+                    {posts[year].map((post: CollectionEntry<"blog">) => (
                       <li>
                         <ArrowCard entry={post} />
                       </li>
